--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,5 @@
-{% include "boiler_plate.html" %}
-  <body>
-    {% include "header.html" %}
-    <div class="banner">
-      <img class="banner-image" src="" />
-    </div>
-    <div class="grid-wrapper">
-      <div class="box-zone">
-        <img src="static/monitor_settings_2.png" alt="" />
-      </div>
-      <div class="box-zone">
-        <img src="static/monitor_settings_2.png" alt="" />
-      </div>
-      <div class="box-zone">
-        <img src="static/monitor_settings_2.png" alt="" />
-      </div>
-      <div class="box-zone">
-        <img src="static/monitor_settings_2.png" alt="" />
-      </div>
-      <div class="box-zone">
-        <img src="static/monitor_settings_2.png" alt="" />
-      </div>
-      <div class="box-zone">
-        <img src="static/monitor_settings_2.png" alt="" />
-      </div>
-    </div>
-    {% include "footer.html" %}
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block title%}Home{% endblock title %}
+{% block content%} {% include "hero.html" %} {% include "project_grid.html" %} {% endblock content %}
+
