Design has begun.....kinda

--- a/templates/hero.html
+++ b/templates/hero.html
@@ -1,3 +1,8 @@
 <div class="banner">
-  <img class="banner-image" src="" />
+  <div class="image_wrapper">
+    <!-- <img src="static/pexels-adrien-olichon-2387793.jpg" alt=""> -->
+    <img class="banner-image" src="static/self_image_placeholder.png" />
+    <H1>Will Williamson</H1>
+    <h3>Developer & Cybersecurity Enthusiast</h3>
+  </div>
 </div>
