--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="static/styles.css" />
+    <link rel="icon" type="image/icon" href="static/favicon.ico">
   </head>
   <body>
     <nav class="Header sticky">
         <ul class="main-nav">
-          <li class="options"><a href="{{ url_for('home') }}">Home</a></li>
+          <li class="options"><a href="{{ url_for('home') }}">Will Williamson</a></li>
           <li class="options"><a href="{{ url_for('resume') }}">Resume</a></li>
           <li class="options"><a href="{{ url_for('projects') }}">Projects</a></li>
           <li class="options"><a href="{{ url_for('blog') }}">Blog</a></li>
