--- a/templates/project_grid.html
+++ b/templates/project_grid.html
@@ -1,4 +1,4 @@
-<div class="grid-wrapper">
+<div class="project-wrapper" id="project-wrapper">
   <div class="box-zone">
     <img src="static/monitor_settings_2.png" alt="" />
   </div>
