--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,7 +1,4 @@
-{% extends "base.html" %}
-
-{% block title %}Resume{% endblock title %}
-{% block content %} <div class="content">
+<div class="content" id="content">
   <h2>Offical Eduction</h2>
   <ul>
     <li>Certified Cisco Network Associate (CCNA) - Cisco</li>
@@ -31,8 +28,8 @@
   <h3>Programming Courses</h3>
   <ul>
     <li>
-      100 Days of Code - The Complete Python Pro Bootcamp for 2021 by Dr.
-      Angela Yu
+      100 Days of Code - The Complete Python Pro Bootcamp for 2021 by Dr. Angela
+      Yu
     </li>
   </ul>
   <h3>Networking Courses</h3>
@@ -45,14 +42,13 @@
   <h3>Skills Development Courses</h3>
   <ul>
     <li>
-      Learning to Learn [Efficient Learning]: Zero to Mastery by Andrei
-      Neagoie
+      Learning to Learn [Efficient Learning]: Zero to Mastery by Andrei Neagoie
     </li>
   </ul>
   <h2>Hobbies</h2>
   <ul>
     <li>
-      4th degree black belt in the Advance Martial Art of<a
+      4th degree black belt in the Advance Martial Art of<a class="kenjute-link"
         href="https://www.kenjuteinternational.com"
       >
         Kenjute</a
@@ -60,4 +56,3 @@
     </li>
   </ul>
 </div>
-{% endblock content %}
