--- a/static/styles.css
+++ b/static/styles.css
@@ -4,8 +4,8 @@ html {
 }
 
 body {
-  margin:0;
-  background-color: grey;
+  margin: 0;
+  background-color: lightgrey;
 }
 
 h1 {
@@ -29,7 +29,7 @@ h3 {
   font-size: 1.5em;
   text-decoration: whitesmoke;
   margin: 0;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0.07);
   height: 10vh;
 }
 
@@ -56,7 +56,7 @@ a {
   height: 100vh;
 }
 
-.image_wrapper {
+.hero-text {
   text-align: center;
   color: white;
   padding: 20px;
@@ -68,7 +68,7 @@ a {
 }
 
 /*Project Grid*/
-.grid-wrapper {
+.project-wrapper {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
@@ -106,4 +106,12 @@ a {
 /*Login Form*/
 .login_form {
   padding: 100px;
+}
+
+.kenjute-link {
+  color: black;
+}
+
+.kenjute-link:hover {
+  color: whitesmoke;
 }
