--- a/templates/hero.html
+++ b/templates/hero.html
@@ -1,8 +1,8 @@
 <div class="banner">
-  <div class="image_wrapper">
-    <!-- <img src="static/pexels-adrien-olichon-2387793.jpg" alt=""> -->
     <img class="banner-image" src="static/self_image_placeholder.png" />
-    <H1>Will Williamson</H1>
-    <h3>Developer & Cybersecurity Enthusiast</h3>
-  </div>
+    <div class="hero-text" id="hero-text">
+      <H1>Will Williamson</H1>
+      <h3>Developer & Cybersecurity Enthusiast</h3>
+    </div>
+    
 </div>
