--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block title%}Home{% endblock title %}
-{% block content%} {% include "hero.html" %} {% include "project_grid.html" %} {% endblock content %}
+{% block content%} {% include "hero.html" %} {% include "project_grid.html" %} 
+{% include "resume.html" %}
+{% endblock content %}
 
