Making progress....I hope....

--- a/templates/hero.html
+++ b/templates/hero.html
@@ -1,8 +1,11 @@
-<div class="banner">
+<div class="hero-container" id="hero-container">
+  <div class="hero-box" id="hero-box">
     <img class="banner-image" src="static/self_image_placeholder.png" />
     <div class="hero-text" id="hero-text">
-      <H1>Will Williamson</H1>
-      <h3>Developer & Cybersecurity Enthusiast</h3>
+      <H1 class="my-name" id="my-name">Will Williamson</H1>
+      <h3 class="my-description" id="my-description">Developer & Cybersecurity Enthusiast</h3>
     </div>
-    
+
+
+  </div>
 </div>
