--- a/templates/project_grid.html
+++ b/templates/project_grid.html
@@ -17,4 +17,10 @@
   <div class="box-zone">
     <img src="static/monitor_settings_2.png" alt="" />
   </div>
+  <div class="box-zone">
+    <img src="static/monitor_settings_2.png" alt="" />
+  </div>
+  <div class="box-zone">
+    <img src="static/monitor_settings_2.png" alt="" />
+  </div>
 </div>
