--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,9 @@
     <nav class="Header sticky">
         <ul class="main-nav">
           <li class="options"><a href="{{ url_for('home') }}">Will Williamson</a></li>
-          <li class="options"><a href="#content">Resume</a></li>
+          <li class="options"><a href="{{ url_for('resume') }}">Resume</a></li>
           <li class="options"><a href="#project-wrapper">Projects</a></li>
-          <li class="options"><a href="{{ url_for('blog') }}">Blog</a></li>
+          <!-- <li class="options"><a href="{{ url_for('blog') }}">Blog</a></li> -->
           <li class="push options"><a href="{{ url_for('login') }}">Login</a></li>
           <li class="options"><a href="{{ url_for('contact') }}">Contact</a></li>
         </ul>
